--- a/stage1.html
+++ b/stage1.html
@@ -100,6 +100,7 @@
 			left: 40%;
 			height: 100px;
 			width: 100px;
+			background-color: brown;
 		}
 
 		#arrow2 {
@@ -108,6 +109,7 @@
 			left: 40%;
 			height: 100px;
 			width: 100px;
+			background-color: brown;
 		}
 
 		#arrow3 {
@@ -116,6 +118,7 @@
 			left: 55%;
 			height: 100px;
 			width: 100px;
+			background-color: brown;
 		}
 
 		#arrow4 {
@@ -124,7 +127,9 @@
 			left: 25%;
 			height: 100px;
 			width: 100px;
+			background-color: brown;
 		}
+		
 	</style>
 
 	<script type="text/javascript">
@@ -2269,10 +2274,10 @@
 
 	<!--Controles -->
 
-	<img src="img/arrow.jpg" id="arrow" onmousedown="inicioSubir()" onmouseup="fimSubir()">
-	<img src="img/arrow2.jpg" id="arrow2" onmousedown="inicioAbaixar()" onmouseup="fimAbaixar()">
-	<img src="img/arrow3.jpg" id="arrow3" onmousedown="inicioDireita()" onmouseup="fimDireita()">
-	<img src="img/arrow4.jpg" id="arrow4" onmousedown="inicioEsquerda()" onmouseup="fimEsquerda()">
+	<div id="arrow" onmousedown="inicioSubir()" onmouseup="fimSubir()"></div>
+	<div id="arrow2" onmousedown="inicioAbaixar()" onmouseup="fimAbaixar()"></div>
+	<div id="arrow3" onmousedown="inicioDireita()" onmouseup="fimDireita()"></div>
+	<div id="arrow4" onmousedown="inicioEsquerda()" onmouseup="fimEsquerda()"></div>
 
 	<barra></barra>
 	<barra2></barra2>
