--- a/stage1.html
+++ b/stage1.html
@@ -20,13 +20,31 @@
 			z-index: 0;
 		}
 
+		#sky {
+			position: absolute;
+			left: 0%;
+			top: 0px;
+			width: 100%;
+			height: 400px;
+			z-index: 1;
+		}
+
+		#land {
+			position: absolute;
+			left: -1%;
+			top: 399px;
+			width: 102%;
+			height: 330px;
+			z-index: 1;
+		}
+
 
 		#nave {
 			position: absolute;
 			top: 30px;
 			left: -70px;
-			height: 50px;
-			width: 50px;
+			height: 70px;
+			width: 70px;
 			background-color: black;
 			z-index: 3;
 			display: block;
@@ -44,24 +62,19 @@
 		}
 
 
-		#enemy, #enemy3 {
+		#enemy, #enemy3, #enemy2 {
 			position: absolute;
 			top: 30px;
 			left: 800px;
-			height: 70px;
-			width: 70px;
+			height: 120px;
+			width: 120px;
 			z-index: 3;
-			display: block;
+			display: none;
 		}
 
 		#enemy2 {
-			position: absolute;
 			top: 500px;
 			left: 800px;
-			height: 70px;
-			width: 70px;
-			z-index: 3;
-			display: block;
 		}
 
 
@@ -93,7 +106,7 @@
 			position: absolute;
 			top: 20px;
 			left: 90%;
-			height: 720px;
+			height: 740px;
 			width: 10%;
 			background-color: grey;
 			z-index: 5;
@@ -201,6 +214,22 @@
 
 		function movimentoInimigo1(){
 
+			document.getElementById('arrow').addEventListener('pointerdown', inicioSubir, false);
+			document.getElementById('arrow2').addEventListener('pointerdown', inicioAbaixar, false);
+			document.getElementById('arrow3').addEventListener('pointerdown', inicioDireita, false);
+			document.getElementById('arrow4').addEventListener('pointerdown', inicioEsquerda, false);
+
+			document.getElementById('arrow').addEventListener('pointerup', fimSubir, false);
+			document.getElementById('arrow2').addEventListener('pointerup', fimAbaixar, false);
+			document.getElementById('arrow3').addEventListener('pointerup', fimDireita, false);
+			document.getElementById('arrow4').addEventListener('pointerup', fimEsquerda, false);
+
+			document.getElementById('botao').addEventListener('pointerup', init_atirar,false);
+
+
+
+
+
 			var nave_len = document.getElementById("nave").style.width;
 			var nave_hei = document.getElementById("nave").style.height;
 
@@ -220,7 +249,7 @@
 			if(enemy.x > 700){
 				enemy.x=enemy.x-10;
 
-
+				document.getElementById("enemy").style.display = "block";
 				document.getElementById("enemy").style.left = enemy.x+"px";
 			}
 
@@ -920,6 +949,7 @@
 			if(enemy2.x > 700 & tempo > 28){
 				enemy2.x=enemy2.x-10;
 
+				document.getElementById("enemy2").style.display = "block";
 				document.getElementById("enemy2").style.left = enemy2.x+"px";
 			}
 
@@ -1603,6 +1633,7 @@
 		function movimentoInimigo3(){
 			if(enemy3.x > 700 & tempo > 58){
 				enemy3.x=enemy3.x-10;
+				document.getElementById("enemy3").style.display = "block";
 				document.getElementById("enemy3").style.left = enemy3.x+"px";
 			}
 
@@ -2337,7 +2368,7 @@
 				nave.bala.x+=30;
 				document.getElementById("proj").style.left =  nave.bala.x+"px";
 
-				if(((nave.bala.x+13 >= enemy.x & nave.bala.x+13 <= enemy.x+30) & ((nave.bala.y >= enemy.y) & (nave.bala.y <= enemy.y+70))) & enemy.tiros < 4){
+				if(((nave.bala.x+13 >= enemy.x & nave.bala.x+13 <= enemy.x+30) & ((nave.bala.y >= (enemy.y+25)) & (nave.bala.y <= enemy.y+100))) & enemy.tiros < 4){
 
 					if(enemy.tiros < 4){
 						document.getElementById("enemy").src = "img/enemyAtk.gif";
@@ -2352,12 +2383,13 @@
 
 						setTimeout(() => {
 							enemy.x = -100;
+							document.getElementById("enemy").style.display = "none";
 							document.getElementById("enemy").style.left = enemy.x+"px";
 						}, 4500);
 					}
 				}
 
-				if(((nave.bala.x+13 >= enemy2.x & nave.bala.x+13 <= enemy2.x+30) & ((nave.bala.y >= enemy2.y) & (nave.bala.y <= enemy2.y+70))) & enemy2.tiros < 4){
+				if(((nave.bala.x+13 >= enemy2.x & nave.bala.x+13 <= enemy2.x+30) & ((nave.bala.y >= (enemy2.y+25)) & (nave.bala.y <= enemy2.y+100))) & enemy2.tiros < 4){
 
 					if(enemy2.tiros < 4){
 						document.getElementById("enemy2").src = "img/enemyAtk.gif";
@@ -2372,12 +2404,13 @@
 
 						setTimeout(() => {
 							enemy2.x = -100;
+							document.getElementById("enemy2").style.display = "none";
 							document.getElementById("enemy2").style.left = enemy.x+"px";
 						}, 4500);
 					}
 				}
 
-				if(((nave.bala.x+13 >= enemy3.x & nave.bala.x+13 <= enemy3.x+30) & ((nave.bala.y >= enemy3.y) & (nave.bala.y <= enemy3.y+70))) & enemy3.tiros < 4){
+				if(((nave.bala.x+13 >= enemy3.x & nave.bala.x+13 <= enemy3.x+30) & ((nave.bala.y >= (enemy3.y+25)) & (nave.bala.y <= enemy3.y+100))) & enemy3.tiros < 4){
 
 					if(enemy3.tiros < 4){
 						document.getElementById("enemy3").src = "img/enemyAtk.gif";
@@ -2392,6 +2425,7 @@
 
 						setTimeout(() => {
 							enemy3.x = -100;
+							document.getElementById("enemy3").style.display = "none";
 							document.getElementById("enemy3").style.left = enemy3.x+"px";
 						}, 4500);
 					}
@@ -2414,7 +2448,7 @@
 
 		function fimAbaixar(){
 			clearInterval(abaixo);
-			document.getElementById("nave").src = "img/ship.png";
+			//document.getElementById("nave").src = "img/ship.png";
 		}
 
 		function inicioSubir(){
@@ -2426,7 +2460,7 @@
 
 		function fimSubir(){
 			clearInterval(acima);
-			document.getElementById("nave").src = "img/ship.png";
+			//document.getElementById("nave").src = "img/ship.png";
 		}		
 
 		function inicioEsquerda(){
@@ -2457,7 +2491,7 @@
 			if(nave.y <= 500 & nave.vivo == true){
 				nave.y+=20;
 				document.getElementById("nave").style.top = nave.y+"px";
-				document.getElementById("nave").src = "img/ship_down.png";
+				//document.getElementById("nave").src = "img/ship_down.png";
 			}
 		}
 
@@ -2465,7 +2499,7 @@
 			if(nave.y >= 30 & nave.vivo == true){
 				nave.y-=20;
 				document.getElementById("nave").style.top = nave.y+"px";
-				document.getElementById("nave").src = "img/ship_up.png";
+				//document.getElementById("nave").src = "img/ship_up.png";
 			}
 		}
 
@@ -2485,11 +2519,18 @@
 
 	</script>
 
+
 	<tela>
+
+		<img src="img/scenary/stage1_sky.jpg" id="sky">
+		<img src="img/scenary/stage1_land.gif" id="land">
+
 
 		<img src="img/cargoship.png" id="enemy">
 		<img src="img/cargoship.png" id="enemy2">
 		<img src="img/cargoship.png" id="enemy3"> 
+
+		
 
 		<div id="bala"></div>
 		<div id="bala2"></div>
@@ -2516,11 +2557,11 @@
 
 	<!--Controles -->
 
-	<div id="arrow" onmousedown="inicioSubir()" onmouseup="fimSubir()"></div>
-	<div id="arrow2" onmousedown="inicioAbaixar()" onmouseup="fimAbaixar()"></div>
-	<div id="arrow3" onmousedown="inicioDireita()" onmouseup="fimDireita()"></div>
-	<div id="arrow4" onmousedown="inicioEsquerda()" onmouseup="fimEsquerda()"></div>
-	<div id="botao" onclick="init_atirar()"></div>
+	<button id="arrow" onmousedown="inicioSubir()" onmouseup="fimSubir()"></button>
+	<button id="arrow2" onmousedown="inicioAbaixar()" onmouseup="fimAbaixar()"></button>
+	<button id="arrow3" onmousedown="inicioDireita()" onmouseup="fimDireita()"></button>
+	<button id="arrow4" onmousedown="inicioEsquerda()" onmouseup="fimEsquerda()"></button>
+	<button id="botao" onclick="init_atirar()"></button>
 
 	<barra></barra>
 	<barra2></barra2>
